--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==1.5.7
 click==7.1.2
 dataclasses==0.8
 dominate==2.6.0
@@ -10,6 +11,8 @@ importlib-metadata==4.6.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==2.0.1
+pycodestyle==2.7.0
+toml==0.10.2
 typing-extensions==3.10.0.0
 visitor==0.1.3
 Werkzeug==1.0.1
